fixed alignment

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -8,6 +8,7 @@
 
 #title {
   font-weight: bold;
+  padding: 12px 25px;
 }
 
 .nav {
